docs: update swagger related
